@@ -23,6 +23,7 @@ lib/Acme/MetaSyntactic/sodor.pm
 lib/Acme/MetaSyntactic/southpark.pm
 lib/Acme/MetaSyntactic/stratego.pm
 lib/Acme/MetaSyntactic/willy_wonka.pm
+lib/Acme/MetaSyntactic/zen.pm
 Makefile.PL
 MANIFEST
 MANIFEST.SKIP
