@@ -15,7 +15,7 @@ configure_requires:
   strict: 0
   warnings: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120630'
 keywords: []
 license: mit
 meta-spec:
@@ -38,7 +38,7 @@ requires:
   warnings: 0
 resources:
   repository: git://github.com/Abigail/Acme-MetaSyntactic-Themes-Abigail.git
-version: 2013072901
+version: 2013072902
 x_test_requires:
   Test::MetaSyntactic: 1
   Test::More: 0.88
